--- a/CarStore_RazorPages/Pages/Add.cshtml
+++ b/CarStore_RazorPages/Pages/Add.cshtml
@@ -10,7 +10,7 @@
 <form method="post">
 	@* The CarModel.Id is here so the full data model is represented on the page.
 	The database behind the API will assign the id. *@
-	<input hidden asp-for="CarModels.Id" />
+	<input hidden asp-for="CarModels.id" />
 	<div class="border p-3 mt-4" style="width:50%">
 		<div class="row pb-2">
 			<h2 class="text-primary pl-3">Add Car</h2>
