--- a/CarStore_RazorPages/Pages/Index.cshtml
+++ b/CarStore_RazorPages/Pages/Index.cshtml
@@ -82,9 +82,9 @@
                         @* The following div contains information to handle the edit and delete functions. *@
                         <div class="w-120 btn-group btn-group-sm" role="group" style="text-align:center">
                             @* Routes to the Edit page and passes the id of the record. *@
-                            <a asp-page="Edit" asp-route-id="@obj.Id" class="btn btn-secondary mx-2">Edit</a>
+                            <a asp-page="Edit" asp-route-id="@obj.id" class="btn btn-secondary mx-2">Edit</a>
                             @* Routes to the Delete page and passes the id of the record. *@
-                            <a asp-page="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">Delete</a>
+                            <a asp-page="Delete" asp-route-id="@obj.id" class="btn btn-danger mx-2">Delete</a>
                         </div>
                     </td>
                 </tr>
