--- a/CarStore_RazorPages/Pages/Delete.cshtml
+++ b/CarStore_RazorPages/Pages/Delete.cshtml
@@ -1,62 +1,60 @@
 ﻿@page
-@model CarStore_RazorPages.Pages.EditModel
+@model CarStore_RazorPages.Pages.DeleteModel
 @{
-	ViewData["Title"] = "Edit page";
+	ViewData["Title"] = "Delete page";
 }
 
 @* Note: Many of the "class=" instances reference Bootstrap sytles. *@
 
-
-@* Begin render Edit code block *@
+@* Begin render Delete code block *@
 <form method="post">
-	@* The id for the data record is hidden because it needs to be available to the
+	@* The id for the data record is hidden because it needs to be avaialable to the
 	code-behind processing, but it's not displayed. *@
 	<input hidden asp-for="CarModels!.id" />
 	<div class="border p-3 mt-4" style="width:50%">
 		<div class="row pb-2">
-			<h2 class="text-primary pl-3">Edit Car</h2>
+			<h2 class="text-primary pl-3">Delete Car</h2>
 			<hr />
 		</div>
 		<div class="mb-3">
 			<label asp-for="CarModels!.brand" class="h5"></label><br />
-			@* Render the current name of the car in an editable text box. *@
-			<input type="text" asp-for="CarModels!.brand" />
+			@* Render the name of the car in a non-editable text box. *@
+			<input type="text" asp-for="CarModels!.brand" disabled />
 			<span asp-validation-for="CarModels!.brand" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="CarModels!.model" class="h5"></label><br />
-			@* Render the current model of the car in an editable text box. *@
-			<input type="text" asp-for="CarModels!.model" />
+			@* Render the model of the car in a non-editable text box. *@
+			<input type="text" asp-for="CarModels!.model" disabled />
 			<span asp-validation-for="CarModels!.model" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="CarModels!.color" class="h5"></label><br />
-			@* Render the current color of the car in an editable text box. *@
-			<input type="text" asp-for="CarModels!.color" />
+			@* Render the color of the car in a non-editable text box. *@
+			<input type="text" asp-for="CarModels!.color" disabled />
 			<span asp-validation-for="CarModels!.color" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="CarModels!.owner" class="h5"></label><br />
-			@* Render the current owner of the car in an editable text box. *@
-			<input type="text" asp-for="CarModels!.owner" />
+			@* Render the owner of the car in a non-editable text box. *@
+			<input type="text" asp-for="CarModels!.owner" disabled />
 			<span asp-validation-for="CarModels!.owner" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="CarModels!.price" class="h5"></label><br />
-			@* Render the current price of the car in an editable text box. *@
-			<input type="text" asp-for="CarModels!.price" />
+			@* Render the price of the car in a non-editable text box. *@
+			<input type="text" asp-for="CarModels!.price" disabled />
 			<span asp-validation-for="CarModels!.price" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="CarModels!.isAvailable" class="h5"></label><br />
-			@* Render the true/false instock state from the record in an editable checkbox. *@
-			<input type="checkbox" asp-for="CarModels!.isAvailable" style="width:20px; height:20px" />
-			<label class="h7"><i class="bi bi-arrow-left"></i> Check the box if available.</label>
+			@* Render the true/false instock state from the record in a non-editable checkbox. *@
+			<input type="checkbox" asp-for="CarModels!.isAvailable" style="width:20px; height:20px" disabled />
 			<span asp-validation-for="CarModels!.isAvailable" class="text-danger"></span>
 		</div>
-		@* Submit the changes or return to the Index page if the edit is cancelled.*@
-		<button type="submit" class="btn btn-primary" style="width:150px;">Update</button>
+		@* Submit the changes or return to the Index page if the delete is cancelled.*@
+		<button type="submit" class="btn btn-danger " style="width:150px;">Delete</button>
 		<a asp-page="Index" class="btn btn-secondary" style="width:150px;">Cancel</a>
 	</div>
 </form>
-@* End render Edit code block *@
+@* End render Delete code block *@
